@@ -31,31 +31,36 @@ echo '<table width="90%">
 	<tr><td valign="top"><h3>'.__('Incidents by status').'</h3>';
 if ($config['flash_charts']) {
 	echo graph_incidents_status ();
-} else {
+}
+else {
 	echo '<img src="include/fgraph.php?tipo=estado_incidente" border="0"></td>';
 }
 echo '<td valign="top"><h3>'.__('Incidents by priority').'</h3>';
 if ($config['flash_charts']) {
 	echo grafico_incidente_prioridad ();
-} else {
+}
+else {
 	echo '<img src="include/fgraph.php?tipo=prioridad_incidente" border="0"></td></tr>';
 }
 echo '<tr><td><h3>'.__('Incidents by group').'</h3>';
 if ($config['flash_charts']) {
-	echo graphic_incident_group ();
-} else {
+	echo grafico_incidente_prioridad ();
+}
+else {
 	echo '<img src="include/fgraph.php?tipo=group_incident" border="0"></td>';
 }
 echo '<td><h3>'.__('Incidents by user').'</h3>';
 if ($config['flash_charts']) {
-	echo graphic_incident_user ();
-} else {
+	echo grafico_incidente_prioridad ();
+}
+else {
 	echo '<img src="include/fgraph.php?tipo=user_incident" border="0"></td></tr>';
 }
 echo '<tr><td><h3>'.__('Incidents by source').'</h3>';
 if ($config['flash_charts']) {
-	echo graphic_incident_source ();
-} else {
+	echo grafico_incidente_prioridad ();
+}
+else {
 	echo '<img src="include/fgraph.php?tipo=source_incident" border="0"></td></tr>';
 }
 echo '</table>';
